[tool.poetry]
name = "h2ogpt"
version = "0.1.0"
description = ""
authors = ["Abubakar Abubakar Yusif <abubakaryusuf951@gmail.com>"]
readme = "README.md"
packages = [{ include = "h2ogpt", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.6.3"
pytest-env = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["src", "."]
asyncio_mode = "auto"
